# api/openapi-spec/openapi.yaml
@@ -128,6 +128,10 @@ components:
           type: string
         started:
           type: boolean
+        parents:
+          type: array
+          items:
+            type: string
 
 paths:
   "/api/v1/repositories":
